src/app/globals.css
@import "tailwindcss";

:root {
  --background: #fcf7e9;
  --foreground: #171717;
  --color-header: #67378d;
  --color-body: #88888c;
  --color-highlighted: #b33d7a;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sriracha: var(--font-sriracha);
  --font-stylish: var(--font-stylish);
  --color-header: var(--color-header);
  --color-body: var(--color-body);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #fcf7e9;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--color-body);
  padding: 50px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

header {
  color: var(--color-header);
  padding-bottom: 50px;
  opacity: 0.7;
}

main {
  flex-grow: 1;
}

.home {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

